[gd_scene load_steps=2 format=2]

[ext_resource path="res://1D User Interface/Calculator/Scripts/Change Calculator.gd" type="Script" id=1]

[node name="Change Calculator" type="WindowDialog"]
margin_left = 102.0
margin_top = 97.0
margin_right = 302.0
margin_bottom = 297.0
script = ExtResource( 1 )

[node name="Basic Calc" type="Button" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 22.0
text = "Basic Calculator"

[node name="Advanced Calc" type="Button" parent="."]
margin_left = 2.0
margin_top = 26.0
margin_right = 198.0
margin_bottom = 46.0
text = "Advanced Calculator"

[node name="Measuring Calc" type="Button" parent="."]
margin_left = 2.0
margin_top = 50.0
margin_right = 198.0
margin_bottom = 70.0
text = "Measuring Calculator"

[connection signal="pressed" from="Basic Calc" to="." method="_on_Basic_Calc_pressed"]
[connection signal="pressed" from="Advanced Calc" to="." method="_on_Advanced_Calc_pressed"]
[connection signal="pressed" from="Measuring Calc" to="." method="_on_Measuring_Calc_pressed"]
